k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oversea-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oversea-server
  template:
    metadata:
      labels:
        app: oversea-server
    spec:
      containers:
      - name: server
        image: us-west1-docker.pkg.dev/cs144-25s-jlin18/oversea-app/oversea-server:v1
        ports: 
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oversea-ai-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oversea-ai-service
  template:
    metadata:
      labels:
        app: oversea-ai-service
    spec:
      containers:
      - name: ai-service
        image: us-west1-docker.pkg.dev/cs144-25s-jlin18/oversea-app/oversea-ai-service:v1
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oversea-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oversea-client
  template:
    metadata:
      labels:
        app: oversea-client
    spec:
      containers:
      - name: client
        image: us-west1-docker.pkg.dev/cs144-25s-jlin18/oversea-app/oversea-client:v3
        ports:
        - containerPort: 80
