k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oversea-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    # Only add the cert annotation after HTTP is working! 
    networking.gke.io/managed-certificates: "oversea-certificate"
spec:
  rules:
    - host: team4.cs144.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oversea-client-service
                port:
                  number: 80
